--- a/src/app/smooth-carousel/carousel/carousel.component.html
+++ b/src/app/smooth-carousel/carousel/carousel.component.html
@@ -1,9 +1,13 @@
-<div id="sc-items-wrapper" style="position: relative;">
-  <div id="sc-items" appWheel>
+<div id="sc-items-wrapper" class="sc-flex-container">
+  <div id="sc-items" class="sc-flex-carousel" appWheel>
     <div class="sc-item" *ngFor="let image of images">
       <img [src]="image"/>
     </div>
   </div>
-  <a class="sc-prev" (click)="prevItem()">&#10094;</a>
-  <a class="sc-next" (click)="nextItem()">&#10095;</a>
+  <div class="sc-flex-arrow sc-prev-arrow-order">
+    <a class="sc-prev" (click)="prevItem()">&#10094;</a>
+  </div>
+  <div class="sc-flex-arrow sc-next-arrow-order">
+    <a class="sc-next" (click)="nextItem()">&#10095;</a>
+  </div>
 </div>
