--- a/src/app/smooth-carousel/carousel/carousel.component.scss
+++ b/src/app/smooth-carousel/carousel/carousel.component.scss
@@ -22,6 +22,7 @@
 
 #sc-items-wrapper {
   width: 100vw;
+  position: relative;
 }
 
 #sc-items {
@@ -49,26 +50,49 @@ img {
 
 .sc-prev, .sc-next {
   cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
+  padding: 15px;
+  margin: 0 5px;
+  border-radius: 10px;
+  color: #504747;
   font-weight: bold;
   font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  transition: 0.5s ease;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .sc-next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.sc-prev:hover, .next:hover {
+.sc-prev:hover, .sc-next:hover {
   background-color: rgba(0,0,0,0.8);
+  color: white;
+}
+
+.sc-flex-container {
+  position: relative;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sc-flex-carousel {
+  flex: 1;
+  flex-grow: 10;
+  order: 0;
+}
+
+.sc-flex-arrow {
+  flex: 1;
+  text-align: center;
+}
+
+.sc-prev-arrow-order {
+  order: -1;
+}
+
+.sc-next-arrow-order {
+  order: 1;
 }
